--- a/templates/sprof/login.html
+++ b/templates/sprof/login.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
+{%extends "blog/base.html" %}
+{% block content %}
+    <form action="" method="POST">{% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" class="btn btn">
+        <input type="reset" class="btn btn">
+    </form>
+{% endblock %}
