--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -50,6 +50,7 @@
                     {#                    <li><a href="#contact">Контакт</a></li>#}
                     {% block loginblock %}
                         {% if not user.is_anonymous %}
+                            <li><a href="/profile">Редактирование профиля</a></li>
                            <li><a href="/logout">Выход</a></li>
                         {% else %}
                             <li><a href="/login">Вход</a></li>
