my profile start korrect

--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -51,6 +51,7 @@
                     {% block loginblock %}
                         {% if not user.is_anonymous %}
                             <li><a href="/profile">Редактирование профиля</a></li>
+                           <li><a href="/profile">Редактирование профиля</a></li>
                            <li><a href="/logout">Выход</a></li>
                         {% else %}
                             <li><a href="/login">Вход</a></li>
