--- a/templates/sprof/user_profile.html
+++ b/templates/sprof/user_profile.html
@@ -1,9 +1,26 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+{%extends "blog/base.html" %}
 
-</body>
-</html>
+{% block title %}
+    {{ profile.get_profile.first_name }} {{ profile.get_profile.last_name }}
+{% endblock %}
+
+{% block content %}
+
+    {% ifequal user.get_profile.id profile.get_profile.id  %}
+        Это Вы
+    {% else %}
+
+    {% endifequal %}
+    {{ profile.id }}
+
+    {{ user.id }}<br>
+    {{ profile.id }}<br>
+
+    Здравствуйте, {{ profile.get_profile.first_name }} {{ profile.get_profile.last_name }}
+    <br>
+    Пол: {{ profile.get_profile.get_gender_display }}
+    <br>
+
+
+
+{% endblock %}
