--- a/templates/sprof/user_profile.html
+++ b/templates/sprof/user_profile.html
@@ -1,12 +1,12 @@
 {%extends "blog/base.html" %}
 
 {% block title %}
-    {{ profile.get_profile.first_name }} {{ profile.get_profile.last_name }}
+    {{ profile.first_name }} {{ profile.last_name }}
 {% endblock %}
 
 {% block content %}
 
-    {% ifequal user.get_profile.id profile.get_profile.id  %}
+    {% ifequal user.id profile.id  %}
         Это Вы
     {% else %}
 
@@ -16,9 +16,11 @@
     {{ user.id }}<br>
     {{ profile.id }}<br>
 
-    Здравствуйте, {{ profile.get_profile.first_name }} {{ profile.get_profile.last_name }}
+    Здравствуйте, {{ profile.first_name }} {{ profile.last_name }}
     <br>
-    Пол: {{ profile.get_profile.get_gender_display }}
+    Пол: {{ profile.get_gender_display }}
+    <br>
+    День рождения: {{ profile.birthday }}
     <br>
 
 
