--- a/templates/sprof/registration.html
+++ b/templates/sprof/registration.html
@@ -10,7 +10,7 @@
         {% endif %}
         {{ form.as_ul }}
 
-        <input type="submit">
+        <input type="submit" value="Регистрация">
 
     </form>
 
