--- a/templates/sprof/user_profile.html
+++ b/templates/sprof/user_profile.html
@@ -20,7 +20,7 @@
     <br>
     Пол: {{ profile.get_gender_display }}
     <br>
-    День рождения: {{ profile.birthday }}
+    Дата регистрации: {{ profile.birthday }}
     <br>
 
 
