--- a/templates/sprof/profile.html
+++ b/templates/sprof/profile.html
@@ -5,7 +5,8 @@
         {{ form.as_ul }}
         {{ form.avatar.value }}
         {{ user.get_profile.avatar }}
-        <input type="submit">
+        <input type="submit" value="Сохранить">
+
 
     </form>
 
