--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -50,8 +50,10 @@
                     {#                    <li><a href="#contact">Контакт</a></li>#}
                     {% block loginblock %}
                         {% if not user.is_anonymous %}
-                            <li><a href="/profile">Редактирование профиля</a></li>
-                           <li><a href="/profile">Редактирование профиля</a></li>
+                            <li>{% block name %}{% endblock %}</li>
+                            <li><a href="/profile">Редактирование профиля {{ user.username }}</a></li>
+                           <li><a href="/post">Добавить пост</a></li>
+                            <li><a href="/content">Смотреть посты</a></li>
                            <li><a href="/logout">Выход</a></li>
                         {% else %}
                             <li><a href="/login">Вход</a></li>
