--- a/templates/sprof/profile.html
+++ b/templates/sprof/profile.html
@@ -1,5 +1,6 @@
 {%extends "blog/base.html" %}
 {% block content %}
+    {% block name %}  {% endblock %}
     <form method="POST" action='/profile/' enctype="multipart/form-data">{% csrf_token %}
 
         {{ form.as_ul }}
@@ -8,5 +9,14 @@
         <input type="submit">
 
     </form>
+
+    {% for post in posts %}
+        <ul style="list-style: none;">
+            <li><h3>{{ post.post_title }}</h3></li>
+            <li><p>{{ post.post }}</p></li>
+            <li>аФФтор - {{ post.author }}</li>
+
+        </ul>
+    {% endfor %}
 
 {% endblock %}
