--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -59,10 +59,10 @@
                             <li><a href="{% url sprofile %}">Мой профиль</a></li>
 
 
-                           <li><a href="/logout">Выход</a></li>
+                           <li><a href="{% url logout %}">Выход</a></li>
                         {% else %}
-                            <li><a href="/login">Вход</a></li>
-                            <li><a href="/registration">Регистрация</a></li>
+                            <li><a href="{% url login %}">Вход</a></li>
+                            <li><a href="{% url registration %}">Регистрация</a></li>
                         {% endif %}
                     {% endblock %}
 
