popitka modeli bloga

--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -65,7 +65,7 @@
                             <li><a href="{% url registration %}">Регистрация</a></li>
                         {% endif %}
                     {% endblock %}
-
+					{{ tra }}
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
