--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -13,7 +13,7 @@
 		<h3> Ваши блоги </h3>
         <ul style="list-style: none;">
 		{% for myBlogs in myBlog %}
-            <li><a href="/content/?blog={{ myBlogs.id }}&name={{ myBlogs.user }}">{{ myBlogs }}</a></li>
+            <li><a href="/content/?blog={{ myBlogs.id }}&name={{ myBlogs.user }}">{{ myBlogs.title }}</a></li>
 		{% endfor %}
 			<li><a href="/blogs">Cоздать блог!</a></li>
         </ul>
