--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>
+		{{ sitename }}
         {% block title %}
         {% endblock %}
     </title>
@@ -56,15 +57,21 @@
 
                             <li>{% block name %}{% endblock %}</li>
                             <li><a href="/profile">Редактирование профиля {{ user.username }}</a></li>
-							{% if myBlog %}{% endif %}
-                           <!--<li><a href="/post">Добавить пост</a></li>
+						<!--<li><a href="/post">Добавить пост</a></li>
 						   
-						   <li><a href="/blogs">Cоздать блог</a></li>
+						    <li><a href="/blogs">Cоздать блог</a></li>
                             <li><a href="/content">Смотреть посты</a></li>/-->
-
-                            <li><a href="{% url sprofile %}">Мой профиль</a></li>
-
-
+							
+							<li><a href="{% url sprofile %}">Мой профиль</a></li>
+							
+							<li>{% block blogs %}
+							
+							{% if myBlog %}
+								<li><a href="{% url myblogs %}">Мои блоги</a></li>
+							{% endif %}
+							
+							{% endblock %}</li>
+							
                            <li><a href="{% url logout %}">Выход</a></li>
                         {% else %}
                             <li><a href="{% url login %}">Вход</a></li>
@@ -82,21 +89,27 @@
 
 <div class="container-fluid">
     <div class="row-fluid">
-        {% if not user.is_anonymous %}
+        {##}
 
         <div class="span2">{% comment %}LEFT{% endcomment %}
 
                 {% block sidebar %}
 
                     <div class="well sidebar-nav">
-                        <ul class="nav nav-list">
+                        <ul class="nav nav-list" style="float: none;">
                             <li class="nav-header">Меню</li>
                             <li><a href="/">Пример ссылки</a></li>
+							{% if not user.is_anonymous %}
+							{% if myBlog %}
+							<li><a href="/myblogs">Мои блоги</a></li>
+							{% endif %}
+							<li><a href="/blogs">Создать блог</a></li>
+							{% endif %}
                         </ul>
                     </div><!--/.well -->
 
                 {% endblock %}
-            {% endif %}
+            {##}
         </div><!--/span-->
 
 
