--- a/templates/blog/content.html
+++ b/templates/blog/content.html
@@ -8,7 +8,8 @@
 
 <h3>{{ blog_obj.title }}</h3>
 
-    {% for post in posts %}
+	{% for post in posts %}
+	<!-- {% for key, value in exc %}{% if key == post.id %}{{ value }}{%endif%}{% endfor %} -->
         <ul style="list-style: none;">
             <li><h5><a href="/view_post/{{ post.id }}">{{ post.post_title }}</a></h5></li>
             <li><p>{{ post.post }}</p></li>
@@ -16,9 +17,14 @@
 			{% get_comment_count for blogs.content post.id as comment_count %}
 			коментов - {{ comment_count }}
         </ul>
-		{% if user.username == name %}
-				<a href="/editpost/{{ post.id }}">редактировать</a>
+
+		{% if user.username == post.author.first_name %}
+				<a href="{% url editpost post.id %}">редактировать</a>
+				<form action="{% url delpost post.id %}" method="post">{% csrf_token %}
+					<input type="submit" value="удалить">
+				</form>
 		{% endif %}
+		
     {% endfor %}
 
     <div class="pagination">
@@ -40,8 +46,9 @@
 	{% endif %}
     </span>
 	{% if user.username == name %}
-    <a href="/post/?id={{blog}}">написать прост</a>
-    </div>
+    <a href="/post/?id={{blog}}">написать пост</a>
 	{% endif %}
+    </div>
+	
 
 {% endblock %}
