--- a/templates/blog/content.html
+++ b/templates/blog/content.html
@@ -14,12 +14,19 @@
             <li><h5><a href="/view_post/{{ post.id }}">{{ post.post_title }}</a></h5></li>
             <li><p>{{ post.post }}</p></li>
             <li>аФФтор - {{ post.author }}</li>
+			<li>создан - {{ post.created_at }}</li>
+			{% if post.updated_at %}
+			<li>обновлен - {{ post.updated_at }}</li>
+			{% endif %}
 			{% get_comment_count for blogs.content post.id as comment_count %}
 			коментов - {{ comment_count }}
         </ul>
 
 		{% if user.username == post.author.first_name %}
-				<a href="{% url editpost post.id %}">редактировать</a>
+				<!-- <a href="{% url editpost post.id %}">редактировать</a> -->
+				<form action="{% url editpost post.id %}" method="post">{% csrf_token %}
+					<input type="submit" value="редактировать">
+				</form>
 				<form action="{% url delpost post.id %}" method="post">{% csrf_token %}
 					<input type="submit" value="удалить">
 				</form>
