--- a/templates/blog/singlepost.html
+++ b/templates/blog/singlepost.html
@@ -11,7 +11,18 @@
 		<li><h3>{{ post.post_title }}</h3></li>
 		<li><p>{{ post.post }}</p></li>
 		<li>аФФтор - {{ post.author }}</li>
+		<li>{% if likes %}
+				<a href="{% url like post.id %}">{{ likes }}</a>
+			{% else %}
+				<a href="{% url like post.id %}">пока никому не понравилось</a>
+			{% endif %}
+		
+		</li>
 		</ul>
+		
+		{{ likes.user }}
+		{{ likes.like }}
+		{{ likes.post }}
 
 		{% if user.username == post.author.first_name %}
 				<a href="{% url editpost post.id %}">редактировать</a>
