fix static path

--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -9,7 +9,7 @@
     {% load staticfiles %}
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-	<link href="c:/work_temp/web/phyton/pyblog1/static/bootstrap/css/bootstrap.css" type="text/css" rel="stylesheet">
+	<link href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" type="text/css" rel="stylesheet">
 	<link href="http://www.zvuki.crimea.com/wp-content/themes/zvuki/bootstrap/css/bootstrap.css" type="text/css" rel="stylesheet">
 	<link href="http://st0.userapi.com/css/al/common.css?393" type="text/css" rel="stylesheet">
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>
