--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -7,12 +7,12 @@
         {% endblock %}
     </title>
     {% load staticfiles %}
-    <link href="{{ STATIC_URL }}/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
-    <link href="{{ STATIC_URL }}/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-	<link href="{{ STATIC_URL }}/bootstrap/css/bootstrap.css" type="text/css" rel="stylesheet">
-	<link href="http://www.zvuki.crimea.com/wp-content/themes/zvuki/bootstrap/css/bootstrap.css" type="text/css" rel="stylesheet">
-	<link href="http://st0.userapi.com/css/al/common.css?393" type="text/css" rel="stylesheet">
-    <script src="{{ STATIC_URL }}/bootstrap/js/bootstrap.min.js"></script>
+    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
+    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+	<link href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" type="text/css" rel="stylesheet">
+	<link href="{{ STATIC_URL }}bootstrap/css/bootstrap2.css" type="text/css" rel="stylesheet">
+	<link href="{{ STATIC_URL }}bootstrap/css/common.css?393" type="text/css" rel="stylesheet">
+    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
@@ -22,7 +22,7 @@
             padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
         }
     </style>
-    <link href="/static/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
