--- a/templates/blog/singlepost.html
+++ b/templates/blog/singlepost.html
@@ -42,7 +42,7 @@
 			{{ form.object_pk }}
 			{{ form.timestamp }}
 			{{ form.security_hash }}
-			<input type="hidden" name="next" value="{% url singlepost post.id %}" />
+			<input type="hidden" name="next" value="{% url singlepost post.id %}" /> <br>
 			<input type="submit" value="Запостить" id="id_submit" />
 			</form>
 		{% else %}
