--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -11,7 +11,7 @@
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 	<link href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" type="text/css" rel="stylesheet">
 	<link href="{{ STATIC_URL }}bootstrap/css/bootstrap2.css" type="text/css" rel="stylesheet">
-	<link href="{{ STATIC_URL }}bootstrap/css/common.css?393" type="text/css" rel="stylesheet">
+	<link href="{{ STATIC_URL }}bootstrap/css/common.css" type="text/css" rel="stylesheet">
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,7 +37,7 @@
     <link rel="apple-touch-icon-precomposed" href="/bootstrap/img/ico/apple-touch-icon-57-precomposed.png">
 </head>
 <body>
-<div class="container"></div>
+<div class="container">
 
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
@@ -99,7 +99,7 @@
         {% if not user.is_anonymous %}
         {##}
 
-        <div class="span2">{% comment %}LEFT{% endcomment %}
+        <div class="span3">{% comment %}LEFT{% endcomment %}
 
                 {% block sidebar %}
 
@@ -122,7 +122,6 @@
         </div><!--/span-->
 
 
-
         <div class="span9">{% comment %}RIGHT{% endcomment %}
             {% if messages %}
                 <ul class="messages">
@@ -131,11 +130,14 @@
                     {% endfor %}
                 </ul>
             {% endif %}
+			
+			<div class="content">		
 
             {% block content %}
                 <h3>Здесь могла бы быть ваша реклама</h3>
 
             {% endblock %}
+			</div>
         </div><!--/span-->
     </div><!--/row-->
 
@@ -146,6 +148,8 @@
     </footer>
 
 </div><!--/.fluid-container-->
+
+</div><!--/container-->
 
 
 
