--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -56,7 +56,7 @@
                         {% if not user.is_anonymous %}
 
                             <li>{% block name %}{% endblock %}</li>
-                            <li><a href="/profile">Редактирование профиля {{ user.username }}</a></li>
+                            <li><a href="/profile">Редактирование профиля {{ user.user }}</a></li>
 						<!--<li><a href="/post">Добавить пост</a></li>
 						   
 						    <li><a href="/blogs">Cоздать блог</a></li>
@@ -96,7 +96,7 @@
 
 <div class="container-fluid">
     <div class="row-fluid">
-        {% if not user.is_anonymous %}
+        
         {##}
 
         <div class="span3">{% comment %}LEFT{% endcomment %}
@@ -107,18 +107,18 @@
                         <ul class="nav nav-list" style="float: none;">
                             <li class="nav-header">Меню</li>
                             <li><a href="/">Пример ссылки</a></li>
-
+							{% if not user.is_anonymous %}
 							{% if myBlog %}
 							<li><a href="/myblogs">Мои блоги</a></li>
 							{% endif %}
 							<li><a href="/blogs">Создать блог</a></li>
-
+							{% endif %}							
                         </ul>
                     </div><!--/.well -->
 
                 {% endblock %}
             {##}
-        {% endif %}
+        
         </div><!--/span-->
 
 
