--- a/templates/blog/search.html
+++ b/templates/blog/search.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 
-        <h2>Результаты поиска по {{ search_term }}</h2>
+        <h2>Результаты поиска по "{{ search_term }}"</h2>
 		
 		<h3>в блогах:</h3>
 {% if search_blog %}				
