--- a/templates/sprof/user_profile.html
+++ b/templates/sprof/user_profile.html
@@ -5,21 +5,40 @@
 {% endblock %}
 
 {% block content %}
-
+<ul style="list-style: none;">
     {% ifequal user.id profile.id  %}
-        Это Вы
-    {% else %}
-
+        <li>Это Вы<li>
     {% endifequal %}
-    <br />
+	
+	
+	<h1>{{ profile }}!</h1><br>
+	{% if profile.avatar != 'False' and profile.avatar != '' %}
+		<img style="float: left; margin-right: 15px;" src="{{ MEDIA_URL }}{{ profile.avatar }}" width=200;/>
+	{% else %}
+		<img style="float: left; margin-right: 15px;" src="{{ MEDIA_URL }}no_image.jpg" width=100;/>
+	{% endif %}
 
-    {{ profile.first_name }} {{ profile.last_name }}
-    <br>
+    
+   <li>
     Пол: {{ profile.get_gender_display }}
-    <br>
+    </li>
+	<li>
     Дата регистрации: {{ profile.birthday }}
-    <br>
-
+	</li>
+	{% if blogs %}
+	Блоги:
+	{% for blog in blogs %}
+	<li>
+    <a href="/content/?blog={{ blog.id }}&name={{ blog.user }}">блог {{ blog.title }}</a>
+	</li>
+	{% endfor %}
+	{% endif %}
+	{% ifequal user.id profile.id  %}
+        <li><a href="/profile">Редактировать</a><li>
+    {% endifequal %}
+	
+    
+</ul>
 
 
 
